--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="search_bitmoji">Search Bitmoji...</string>
     <string name="content_description_search_icon">Search icon</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
